--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,17 @@
       "/@/*": [
         "src/*"
       ],
+      "/#/*": [
+        "types/*"
+      ]
     }
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "types/**/*.d.ts",
+    "types/**/*.ts"
   ]
 }
