--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:mock": "cross-env USE_MOCK=true vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
@@ -10,6 +11,7 @@
     "@arco-design/web-vue": "^2.18.1",
     "@vueuse/core": "^7.7.1",
     "easy-typer-js": "^2.1.0",
+    "mockjs": "^1.1.0",
     "v3-infinite-loading": "^1.0.5",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13",
@@ -19,10 +21,13 @@
     "@types/node": "^17.0.21",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vitejs/plugin-vue-jsx": "^1.3.8",
+    "cross-env": "^7.0.3",
     "less": "^4.1.2",
+    "rollup": "^2.70.0",
     "typescript": "^4.6.2",
     "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.6",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vite-plugin-windicss": "^1.8.3",
     "vue-tsc": "^0.32.1",
